--- a/src/app/Core Components/nav-bar/nav-bar.component.scss
+++ b/src/app/Core Components/nav-bar/nav-bar.component.scss
@@ -16,6 +16,7 @@
       padding: 20px;
       padding: 20px;
       color: white;
+      outline: none;
       font-size: 1.1rem;
       transition: all 0.3s ease 0s;
       cursor: pointer;
