--- a/src/app/Modules/landing-page/topNav/topNav.component.scss
+++ b/src/app/Modules/landing-page/topNav/topNav.component.scss
@@ -7,12 +7,17 @@
   li {
     list-style: none;
     color: #e5e5e5;
+    outline: none;
     padding: 1rem;
     cursor: pointer;
     transition: all 0.4s cubic-bezier(0.4, 0, 1, 1) 0s;
     &:hover {
-      border-top: 1px solid;
+      color: rgba(253, 125, 96, 1);
+      // border-top: 1px solid;
       // font-size: 1.2rem;
     }
   }
+}
+.linkActive {
+  color: rgba(253, 125, 96, 1)  !important;
 }
