--- a/src/app/Modules/landing-page/tv-shows/tv-shows-display/tv-shows-display.component.html
+++ b/src/app/Modules/landing-page/tv-shows/tv-shows-display/tv-shows-display.component.html
@@ -5,9 +5,9 @@
     <div class="movies">
       <div class="uk-position-relative uk-visible-toggle uk-light" uk-slider="autoplay: true" tabindex="-1" >
         <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-5@m">
-          <li *ngFor="let movie of movies">
-            <div class="uk-panel" (click) = "getMovieInfo(movie.id)">
-              <img [src] = "movie.poster_path" alt="posterImage">
+          <li *ngFor="let tvShow of tvShows">
+            <div class="uk-panel">
+              <img [src] = "tvShow.poster_path" alt="posterImage">
             </div>
           </li>
         </ul>
