--- a/src/app/Modules/landing-page/tv-shows/tv-shows.component.html
+++ b/src/app/Modules/landing-page/tv-shows/tv-shows.component.html
@@ -1,3 +1,10 @@
 <div class="wrapper">
   <app-top-nav [navItems] = "navItems"></app-top-nav>
+  <app-tv-shows-display [categoryName] = "category1"></app-tv-shows-display>
+  <app-tv-shows-display [categoryName] = "category2"></app-tv-shows-display>
+  <app-tv-shows-display [categoryName] = "category3"></app-tv-shows-display>
+  <app-tv-shows-display [categoryName] = "category4"></app-tv-shows-display>
+  <app-tv-shows-display [categoryName] = "category5"></app-tv-shows-display>
+  <app-tv-shows-display [categoryName] = "category6"></app-tv-shows-display>
+  <app-tv-shows-display [categoryName] = "category7"></app-tv-shows-display>
 </div>
