--- a/src/app/Modules/landing-page/landing-page.component.html
+++ b/src/app/Modules/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
 <div class="wrapper">
-  <app-top-nav [navItems] = "navItems"></app-top-nav>
+  <!-- <app-top-nav [navItems] = "navItems"></app-top-nav> -->
   <router-outlet></router-outlet>
 </div>
