--- a/src/app/Modules/landing-page/movies/popular-movies/popular-movies.component.html
+++ b/src/app/Modules/landing-page/movies/popular-movies/popular-movies.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
+    <app-top-nav [navItems] = "navItems"></app-top-nav>
     <p class="info">"Louis, I think this is the beginning of a beautiful friendship"</p>
   <app-loader [loading]= 'isPageLoading'></app-loader>
   <div class="image-wrapper" *ngIf="!isPageLoading">
