--- a/src/app/Modules/landing-page/tv-shows/tv-shows-display/tv-shows-display.component.scss
+++ b/src/app/Modules/landing-page/tv-shows/tv-shows-display/tv-shows-display.component.scss
@@ -15,3 +15,10 @@
 .uk-active {
   padding-left: 20px !important;
 }
+@media (max-width: 560px) {
+  .uk-panel {
+    img {
+      height: 245px !important;
+    }
+  }
+}
