--- a/src/app/Modules/landing-page/movies/movies.component.html
+++ b/src/app/Modules/landing-page/movies/movies.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <!-- <app-movies-display [categoryName] = "category1"></app-movies-display> -->
+    <app-top-nav [navItems] = "navItems"></app-top-nav>
   <app-movies-display [categoryName] = "category1"></app-movies-display>
   <app-movies-display [categoryName] = "category2"></app-movies-display>
   <app-movies-display [categoryName] = "category3"></app-movies-display>
